# kivo

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: App.css  App.tsx  providers.ts  store.ts  useTranslate.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  translate.rs  tts.rs
src/components/: Header.tsx  Layout.tsx  Sidebar.tsx
src/pages/: ApiKeysPage.tsx  HistoryPage.tsx  TranslatePage.tsx
